Change History
==============

0.2 - Unreleased
------------------

- Set pad_id directly in the settings. [j23d]


0.2a1 - 2012-07-02
------------------

- Initial version [j23d]